# harbinger

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  Taskfile.yml  docker-compose.yml
harbinger/: .dockerignore  Dockerfile  Dockerfile.mythic  Dockerfile.proxy  MANIFEST.in  base-tooling-requirements.txt  bofhound.in  bofhound.txt  docker-entrypoint.sh  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_dev.in  requirements_dev.txt  requirements_socks.in  requirements_socks.txt
harbinger-cli/: README.md  pyproject.toml
harbinger-cli/src/hbr_shell/: cli.py  importer.py  recorder.py  utils.py
harbinger-cli/src/hbr_shell/commands/: __init__.py  c2.py  credentials.py  domains.py  files.py  hosts.py  labels.py  login.py  playbooks.py  proxies.py  shell.py
harbinger/docker/: openssl.cnf
harbinger/docker/custom_tools/: list_processes.py
harbinger/interface/: .eslintrc.js  index.html  package-lock.json  package.json  postcss.config.js  quasar.config.js
harbinger/interface/src/: App.vue  asciinema.d.ts  env.d.ts  format-credential.ts  load-data.ts  load-object.ts  mark-owned.ts  models.ts  quasar.d.ts  shims-vue.d.ts  truncate.ts
harbinger/interface/src/boot/: axios.ts
harbinger/interface/src/components/: ActionsList.vue  AddC2JobTemplate.vue  AddProxyJob.vue  AddProxyJobTemplate.vue  BreadCrumb.vue  BulkLabelActions.vue  C2Implant.vue  C2ImplantSelect.vue  C2Implants.vue  C2Job.vue  C2Output.vue  C2Server.vue  C2Servers.vue  C2Task.vue  C2Tasks.vue  CastPlayer.vue  CertificateAuthorityList.vue  CertificateTemplateList.vue  ChainStepsGraph.vue  CheckList.vue  CredentialSelect.vue  DelaySelect.vue  DomainSelect.vue  EmptyChainStep.vue  EssentialLink.vue  EventWebSocket.vue  ExampleComponent.vue  FileContent.vue  FileSelect.vue  FileView.vue  FilesSelect.vue  FilesView.vue  FilterSelect.vue  FilterView.vue  GlobalSearch.vue  GraphNode.vue  GraphViewer.vue  GraphVisualization.vue  HarbingerSettings.vue  HighlightList.vue  (+45 more)
harbinger/interface/src/css/: app.scss  quasar.variables.scss
harbinger/interface/src/layouts/: LoginLayout.vue  MainLayout.vue
harbinger/interface/src/pages/: ActionsPage.vue  AddC2JobTemplate.vue  AddC2Server.vue  AddChainTemplate.vue  AddCredential.vue  AddDomain.vue  AddIssue.vue  AddLabel.vue  AddManualTimelineTask.vue  AddObjective.vue  AddPassword.vue  AddPlan.vue  AddPlanStep.vue  AddProxy.vue  AddProxyJob.vue  AddProxyJobChain.vue  AddProxyJobChainFromTemplate.vue  AddProxyJobTemplate.vue  AddSituationalAwareness.vue  AddSuggestion.vue  BloodHoundUtils.vue  C2Implant.vue  C2Implants.vue  C2Job.vue  C2Jobs.vue  C2Output.vue  C2OutputPage.vue  C2Server.vue  C2Servers.vue  C2Task.vue  C2TaskOutput.vue  C2Tasks.vue  CertificateAuthoritiesPage.vue  CertificateTemplatesPage.vue  ChecklistPage.vue  ChiselPage.vue  ComponentsPage.vue  CreatePlaybookTemplateAI.vue  CreateTimeLine.vue  CredentialPage.vue  (+42 more)
harbinger/interface/src/router/: index.ts  routes.ts
harbinger/interface/src/stores/: ParamStore.ts  datastore.ts  example-store.ts  files.ts  graph.ts  graph_node_type.ts  index.ts  labels.ts  meta.ts  mythic_implants.ts  navigation.ts  object-counters.ts  progress.ts  search.ts  store-flag.d.ts
harbinger/src/harbinger/: .gitignore  __init__.py  enums.py
harbinger/src/harbinger/alembic/: env.py
harbinger/src/harbinger/config/: __init__.py  admin.py  app.py  constants.py  converter.py  create_user.py  (+4 more)
(+469 files in other folders)
